# LogicParser-c

./: CMakeLists.txt
src/: Main.c
src/Interpreter/: Env.c  Env.h  EnvEntry.c  EnvEntry.h  ExpressionEvaluator.c  ExpressionEvaluator.h  TruthTable.c  TruthTable.h
src/Lexer/: Lexer.c  Lexer.h  Token.c  Token.h
src/Parser/: AST.c  AST.h  Parser.c  Parser.h
src/Scanners/: StringScanner.c  StringScanner.h  TokenScanner.c  TokenScanner.h  WStringScanner.c  WStringScanner.h
src/Shared/: Operators.c  Operators.h
src/Utils/: DynamicBuffer.c  DynamicBuffer.h  StringUtils.c  StringUtils.h
